--- a/index.ipynb
+++ b/index.ipynb
@@ -54,7 +54,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2\n"
+      "2\n",
+      "9\n"
      ]
     }
    ],
@@ -67,12 +68,17 @@
     "vacation_days = vacation_days + 1\n",
     "\n",
     "# print how many vacation days there are\n",
+    "print(vacation_days)\n",
+    "\n",
+    "vacation_days=3\n",
+    "vacation_days=vacation_days+3\n",
+    "vacation_days=vacation_days+3\n",
     "print(vacation_days)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -192,9 +198,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "We are now in our elif statement!\n",
+      "This means that we exceeded our goals this quarter\n",
+      "We will increase our vacation days by two\n",
+      "vacation_days =  3\n"
+     ]
+    }
+   ],
    "source": [
     "vacation_days = 1\n",
     "if False:\n",
@@ -461,7 +478,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -470,7 +487,7 @@
        "2"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -550,7 +567,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -662,7 +679,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.0"
+   "version": "3.6.6"
   }
  },
  "nbformat": 4,
